--- a/Website/Views/_ViewImports.cshtml
+++ b/Website/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using Website
-@using DataLayer.Models
+﻿@using website
+@using website.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
