--- a/Website/Views/Account/PasswordResetOnlyNewPass.cshtml
+++ b/Website/Views/Account/PasswordResetOnlyNewPass.cshtml
@@ -1,4 +1,4 @@
-﻿@model website.ViewModels.ResetPasswordOnlyNewPassModel
+﻿@model Website.ViewModels.ResetPasswordOnlyNewPassModel
 @{
     Layout = "_LayoutHead";
 }
