--- a/Website/Views/Orders/Orders2.cshtml
+++ b/Website/Views/Orders/Orders2.cshtml
@@ -1,6 +1,6 @@
 ﻿@*подключаем все tag-хелперы*@
 @model IndexViewModelPagination
-@addTagHelper "*, website"
+@addTagHelper "*, Website"
 @{
     Layout = "_LayoutHome";
 }
