--- a/Website/Views/Shared/_Layout.cshtml
+++ b/Website/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - website</title>
+    <title>@ViewData["Title"] - Website</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -45,7 +45,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2019 - website - <a asp-area="" asp-controller="Main" asp-action="Privacy">Privacy</a>
+            &copy; 2019 - Website - <a asp-area="" asp-controller="Main" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
 
