--- a/Website/Views/Account/Login.cshtml
+++ b/Website/Views/Account/Login.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Mvc.Localization
 @inject IViewLocalizer Localizer
-@model website.ViewModels.LoginModel
+@model Website.ViewModels.LoginModel
 @{
     Layout = "_LayoutHead";
 }
