--- a/Website/Views/Account/Register.cshtml
+++ b/Website/Views/Account/Register.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Mvc.Localization
 @inject IViewLocalizer Localizer
-@model website.ViewModels.RegisterModel
+@model Website.ViewModels.RegisterModel
 @{
     Layout = "_LayoutHead";
 }
