--- a/Website/Views/_ViewImports.cshtml
+++ b/Website/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using website
-@using website.Models
+﻿@using Website
+@using Website.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
