я абсолютно не понимаю почему оно падает с The remote party closed the WebSocket connection without completing the close handshake при отправке уведомлений. ведь если сразу отправлять сообщения клиент их спокойно принимает. у websocket-а какая-то магия внутри

--- a/Website/Views/Shared/_LayoutHome.cshtml
+++ b/Website/Views/Shared/_LayoutHome.cshtml
@@ -46,20 +46,56 @@
                     }
                 }
 
-                var update = function () {
+                @*var update = function () {
                     $.ajax({
                         type: 'POST',
                         url: '/Orders/GetNewOrdersCount',
                         success: function (data) {
                             SetNewOrdersCount(data);
-                            @*setNewFeedbackCount(?);*@
+                            @*setNewFeedbackCount(?);
                         },
                     });
                 };
 
                 var refInterval = window.setInterval('update()', 5000); // 5 seconds
-                update();
+                update();*@
+
+
+
+
+
             </script>
+
+
+
+            <script>
+            (function () {
+                var getWebSocketMessages = function (onMessageReceived) {
+                    var url = `wss://${location.host}/Orders/SetWebsocketOrdersCount`
+                    console.log('url is: ' + url);
+
+                    var webSocket = new WebSocket(url);
+
+                    webSocket.onmessage = onMessageReceived;
+                };
+
+
+                getWebSocketMessages(function (message) {
+                    console.log("Пришло уведомление");
+                    var jsonObj = JSON.parse(message.data);
+                    console.log(jsonObj);
+
+                    SetNewOrdersCount(jsonObj.ordersCount);
+                    
+
+                });
+            }());
+
+        </script>
+
+
+
+
         </div>
         <!-- /#Левое меню -->
         <!---->
