--- a/Website/Views/Shared/_LayoutHome.cshtml
+++ b/Website/Views/Shared/_LayoutHome.cshtml
@@ -88,7 +88,7 @@
                     };
 
                     webSocket.onmessage = function (event) {
-                        alert("Получены данные " + event.data);
+                        console.log("Получены данные " + event.data);
                     };
 
                     webSocket.onerror = function (error) {
